[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "repo-merger-cli"
version = "1.0.0"
authors = [
  # ご自身の情報に書き換えてください
  { name="HawkClaws", email="your.email@example.com" },
]
description = "A tool to merge repository text files into a single string for LLM prompts, respecting .gitignore."
readme = "README.md"
requires-python = ">=3.8"
license = { file="LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Utilities",
    "Environment :: Console",
]
# --- 依存ライブラリ ---
dependencies = [
    "pyperclip>=1.8.0", # クリップボード機能
    "pathspec>=0.12.0", # .gitignore のパース機能
]

[project.urls]
# ご自身のGitHubリポジトリなどに書き換えてください
Homepage = "https://github.com/your-username/repo-merger"

# --- CLIコマンドの設定 ---
# 'repo-merge' というコマンドで 'repo_merger.cli' モジュールの 'main' 関数を実行
[project.scripts]
repo-merge = "repo_merger.cli:main"

[tool.setuptools.package-data]
"repo_merger" = ["data/default.gitignore"]