[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "repo-merger-cli"
version = "2.2.1" # エラー修正のためバージョン更新
authors = [
  { name="Your Name", email="you@example.com" },
]
description = "A CLI tool to merge entire repositories or collect specific function dependencies for LLMs."
readme = "README.md"
requires-python = ">=3.9"
license = { text="Apache-2.0" }
dependencies = [
    "pyperclip>=1.8.0",
    "pathspec>=0.11.0",
]

[project.optional-dependencies]
interactive = [
    "rich>=13.0.0",
    "textual>=0.50.0",
]

[project.scripts]
repo-merge = "merger_toolkit.merger.cli:main"
code-collector = "merger_toolkit.collector.main:main"

[tool.setuptools]
# 変更点: パッケージを自動検出する方法に変更
# これが 'src' ディレクトリ以下にある全てのパッケージ（merger_toolkit, merger_toolkit.mergerなど）を
# 自動的に見つけてくれます。
[tool.setuptools.packages.find]
where = ["src"]

# データファイルの指定は変更ありません
[tool.setuptools.package-data]
"merger_toolkit.merger" = ["data/default.gitignore"]
"merger_toolkit.collector" = ["*.js", "package.json"]